Jython NEWS

Jython 2.5.2a1
  Bugs Fixed
    - [ 1225 ] socket.getservbyname/port() not yet supported
    - [ 1532 ] Cannot use docstring when defining class
    - [ 1530 ] BoolOp in multiple assign causes VerifyError
    - [ 1478 ] defaultdict & weakref.WeakKeyDictionary [TypeError: first argument must be callable]
    - [ 1487 ] Import of module with latin-1 chars fails on utf-8 file encoding
    - [ 1449 ] Ellipsis comparison different from Python 2.5 to Jython 2.5
    - [ 1493 ] tarfile.extractall() throws "AttributeError: 'module' object has no attribute 'chown'" when called by root
    - [ 1470 ] os.mkdir Errno difference from cpython
    - [ 1496 ] fix os.listdir errno for non-existing dirs
    - [ 1499 ] PostgreSQL datahandler should return Decimals instead of floats for NUMERIC/DECIMAL columns
    - [ 1477 ] os.setpgrp and posix.setpgrp fail with TypeError
    - [ 1396 ] Assigning os module funcs as class attributes incompatible with CPython
    - [ 1504 ] Inheriting twice from the same Java interface causes MRO problems
    - [ 1511 ] PySet doesn't support Java serialization
    - [ 1426 ] JSR 223 Bindings changes not taking effect and leaking between threads; unnecessary synchronization
    - [ 1548 ] Parentheses in CLASSPATH cause errors in jython.bat
    - [ 1576 ] files opened in 'a+' mode not readable
    - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
      during Django or Pylons development mode reloading)
    - Fix pickling of collections.defaultdict objects
    - Fix the cmath module to accept objects implementing the __float__ method
    - Add google indexer (by Yin Wang and Steve Yegge)

Jython 2.5.1rc3
  Bugs Fixed
    - [ 1466 ] wrong handling of append only files

Jython 2.5.1rc2
  New Features
    - zxJDBC supports the with-statement: connections are committed or rollbacked; cursors are closed 
  Bugs Fixed
    - [ 1079 ] fixed regression on issue: twisted.python.threadable module: missing attribute '_RLock'